fix: correct the elapsed time since posting plus css overflow correction.

--- a/JS/week-08/day-4-5/reddit.css
+++ b/JS/week-08/day-4-5/reddit.css
@@ -23,7 +23,6 @@ body {
 	font-weight: bold;
 }
 
-
 main {
 	float: left;
 	width: 65%;
@@ -39,6 +38,7 @@ main {
 
 .title {
 	display: block;
+	max-height: 30px;
 	font-size: 1.4em;
 }
 
@@ -108,7 +108,6 @@ input {
 
 a {
 	margin-left: 2px;
-	max-width: 350px;
 	overflow: hidden;
 	cursor: pointer;
 }
